--- a/config.yaml
+++ b/config.yaml
@@ -4,9 +4,9 @@ theme: "starter-hugo-academic"
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Academic # Website name
-baseurl: '' # Website URL
-copyright: '' # Footer text, e.g. '© {year} Me'
+title: Karim Mezhoud # Website name
+baseurl: 'https://kmezhoud.netlify.app/' # Website URL
+copyright: '© {2021} Karim Mezhoud' # Footer text, e.g. '© {year} Me'
 
 ############################
 ## LANGUAGE
