--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -21,18 +21,18 @@ twitter: ''
 # Contact (edit or remove options as required)
 
 email: test@example.org
-phone: 888 888 88 88
+phone: 00216 25 909 901
 address:
-  street: 450 Serra Mall
-  city: Stanford
-  region: CA
-  postcode: '94305'
-  country: United States
-  country_code: US
+  street: Technopole Sidi Thabet
+  city: Ariana
+  region: Tunis
+  postcode: '2017'
+  country: Tunisia
+  country_code: TN
 coordinates:
-  latitude: '37.4275'
-  longitude: '-122.1697'
-directions: Enter Building 1 and take the stairs to Office 200 on Floor 2
+  latitude: '36.9274204'
+  longitude: '10.02867'
+directions: Enter CNSTN and take the stairs to building 3 on Floor 1
 office_hours:
   - 'Monday 10:00 to 13:00'
   - 'Wednesday 09:00 to 10:00'
@@ -44,7 +44,7 @@ contact_links:
     link: 'https://twitter.com/Twitter'
   - icon: skype
     icon_pack: fab
-    name: Skype Me
+    name: Mezhoud007
     link: 'skype:echo123?call'
   - icon: keybase
     icon_pack: fab
