--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -26,7 +26,7 @@ address:
   street: Technopole Sidi Thabet
   city: Ariana
   region: Tunis
-  postcode: '2017'
+  postcode: '2020'
   country: Tunisia
   country_code: TN
 coordinates:
@@ -79,6 +79,9 @@ highlight_languages:
   - r
   - python
   - latex
+  - bash
+  - regex
+  - markdown
 math: false
 diagram: false
 privacy_pack: false
