--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,6 +13,9 @@ main:
   - name: Projects
     url: '#projects'
     weight: 30
+  - name: Packages
+    url: '#packages'
+    weight: 40
 #  - name: Talks
 #    url: '#talks'
 #    weight: 40
