--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,6 +10,9 @@ main:
 #  - name: Posts
 #    url: '#posts'
 #    weight: 20
+  - name: Skills
+    url: '#Skills'
+    weight: 20
   - name: Projects
     url: '#projects'
     weight: 30
