--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -33,10 +33,10 @@ coordinates:
   latitude: '36.9274204'
   longitude: '10.02867'
 directions: Enter CNSTN and take the stairs to building 3 on Floor 1
-#office_hours:
-#  - 'Monday 10:00 to 13:00'
-#  - 'Wednesday 09:00 to 10:00'
-#appointment_url: 'https://calendly.com'
+office_hours:
+ - 'Monday 10:00 to 15:00'
+ - 'Wednesday 10:00 to 11:00'
+appointment_url: 'https://calendly.com'
 contact_links:
  # - icon: twitter
  #   icon_pack: fab
@@ -56,24 +56,24 @@ contact_links:
   #   link: 'https://discourse.gohugo.io'
 
 # Site header
-header:
-  navbar:
-    enable: true
-    align: r
-    show_logo: true
-    show_language: false
-    show_day_night: true
-    show_search: true
-    highlight_active_link: true
-
-footer:
-  copyright:
-    notice: '© {year} Karim Mezhoud. This work is licensed under {license}'
-    license:
-      enable: true
-      allow_derivatives: false
-      share_alike: true
-      allow_commercial: false
+# header:
+#   navbar:
+#     enable: true
+#     align: r
+#     show_logo: true
+#     show_language: false
+#     show_day_night: true
+#     show_search: true
+#     highlight_active_link: true
+# 
+# footer:
+#   copyright:
+#     notice: '© {year} Karim Mezhoud. This work is licensed under {license}'
+#     license:
+#       enable: true
+#       allow_derivatives: false
+#       share_alike: true
+#       allow_commercial: false
       
 main_menu:
   enable: true
