--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -67,7 +67,7 @@ contact_links:
 # 
 footer:
   copyright:
-    notice: '© {year} Karim Mezhoud. This work is licensed under {license}'
+    notice: '(ɔ) {year} Karim Mezhoud. This work is licensed under {license}'
     license:
       enable: true
       allow_derivatives: false
